@startuml
'https://plantuml.com/class-diagram


class Client {
}

class HomeTheaterFacade{
    DVDPlayer dvdPlayer;
    Popcore popcore;
    Projector projector;
    Screen screen;
    Stereo stereo;
    TheaterLight theaterLight;
    ready()
    play()
    pause()
    end()
}

class Stereo{
    on()
    off()
}

class Popcore{
    on()
    off()
}

class TheaterLight{
    on()
    off()
}

class Projector{
    on()
    off()
}

class Screen{
    on()
    off()
}

HomeTheaterFacade ...> Stereo
HomeTheaterFacade ...> Popcore
HomeTheaterFacade ...> TheaterLight
HomeTheaterFacade ...> Projector
HomeTheaterFacade ...> Screen

Client ...>HomeTheaterFacade


@enduml